# parse2wiki

./: .gitignore  CONTEXT.md  GLOBAL VIEW-WORKFLOW-BAGERA.md  LICENSE  README.md  compliance-report.md  generate_apoc_docx.py  pyproject.toml
.claude/skills/collateral-analyzer/: SKILL.md
.claude/skills/collateral-analyzer/assets/: brief-template.md
.claude/skills/collateral-analyzer/references/: analysis-patterns.md
.claude/skills/compliance-validator/: SKILL.md
.claude/skills/compliance-validator/assets/: validation-checklist-template.md
.claude/skills/compliance-validator/references/: rfp-compliance-patterns.md
.claude/skills/doc2md/: SKILL.md
.claude/skills/empathy-reviewer/: SKILL.md
.claude/skills/empathy-reviewer/references/: tone-principles.md
.claude/skills/proposal-assembler/: SKILL.md
.claude/skills/proposal-assembler/assets/: assembly-template.md
.claude/skills/requirements-mapper/: SKILL.md
.claude/skills/requirements-mapper/assets/: coverage-matrix-template.md
.claude/skills/requirements-mapper/references/: rfp-section-taxonomy.md
.claude/skills/section-drafter/: SKILL.md
.claude/skills/section-drafter/assets/section-templates/: case-studies.md  org-overview.md  security-compliance.md  team-pricing.md  technical-architecture.md
.claude/skills/section-drafter/references/: drafting-patterns.md
.doc2md-cache/: manifest.json
.doc2md-cache/work/: 09697043-cm.json  09697043-cm.md  09697043-pg0.md  09697043-pg1.md  09697043-pg10.md  09697043-pg11.md  09697043-pg12.md  09697043-pg13.md  09697043-pg14.md  09697043-pg15.md  09697043-pg16.md  09697043-pg17.md  09697043-pg18.md  09697043-pg19.md  09697043-pg2.md  09697043-pg20.md  09697043-pg21.md  09697043-pg22.md  09697043-pg23.md  09697043-pg24.md  09697043-pg25.md  09697043-pg26.md  09697043-pg27.md  09697043-pg28.md  09697043-pg29.md  09697043-pg3.md  09697043-pg30.md  09697043-pg31.md  09697043-pg32.md  09697043-pg33.md  09697043-pg34.md  09697043-pg35.md  09697043-pg36.md  09697043-pg37.md  09697043-pg38.md  09697043-pg39.md  09697043-pg4.md  09697043-pg40.md  09697043-pg41.md  09697043-pg42.md  (+32 more)
.doc2md-cache/workorders/: EAC_WAISL_RESA_Response_v4.json  GLOBAL VIEW-WORKFLOW-BAGERA.json  RFP.json
.serena/: project.yml
config/: default.yaml
doc2md/: __init__.py  cli.py  detection.py  engine.py  figures.py  finance.py  lang.py  manifest.py  mermaid.py  mermaid_validate.py  ocr.py  optimise.py  writer.py
doc2md/parsers/: __init__.py  base.py  docx.py  image.py  markitdown.py  mineru.py  pandoc.py  pdf_inspector.py  pdf_multilingual.py  pdfplumber.py  pdftotext.py  pptx.py  pymupdf4llm.py  registry.py  undoc.py  unpdf.py  xlsx.py
docs/: MULTILINGUAL.md
docs/adr/: 0001-skill-first-preprocessor-architecture.md
parse2wiki/: __init__.py  cli.py  document_pipeline.py  extract.py  extract_markitdown.py
parse2wiki/diagrams/: __init__.py  detector.py  mermaid_gen.py  ocr.py
parse2wiki/summarizer/: __init__.py  wiki_summary.py
parse2wiki/wiki/: __init__.py  ingester.py
scripts/: install_deps.sh
skill/doc2md/: SKILL.md
tests/: test_engine.py
