[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc2md"
version = "0.1.0"
description = "Deterministic document → token-optimised markdown + Mermaid pre-processor for llm_wiki"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sujoy Mukherjee", email = "sujoym@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pdfplumber>=0.10.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.3",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.2",
    "click>=8.1.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
modern = [
    "markitdown",
    "pymupdf4llm",
]
dev = [
    "pytest>=7.4.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

# External parser packages register here; each entry loads to a zero-arg
# factory returning a doc2md.parsers.base.Parser.
[project.entry-points."doc2md.parsers"]

[project.scripts]
doc2md = "doc2md.cli:main"
doc2md-check = "doc2md.cli:check"

[tool.setuptools.packages.find]
where = ["."]
include = ["doc2md*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]